--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ d3.queue()
                 .attr("class", "foreignobj")
                 .append("xhtml:div")
                 .attr("dy", "1em")
-                .html(d => '<p class="title">' + d.data.name + '</p>')
+                .html(d => { return '<p class="title">' + d.data.name + '</p>'  + '<p>' + 'Number of Papers: ' + (d.value || 0) + '</p>'})
                 .attr("class", "textdiv");
 
             function transition(d) {
